# T.I.T.O-Proyect

./: .gitignore  CMakeLists.txt  FileSystem.c  FileSystem.h  LCD.c  SwichHandler.c  SwichHandler.h  TITOLedCore.c  TITOLedCore.h  main.c
AudioCapture/: AudioCapture.c  AudioCapture.h
FatFs_SPI/sd_driver/: hw_config.c  sd_card.c  sd_card.h
FatFs_SPI/src/: glue.c
FileSystem/: FileSystem.c  FileSystem.h
LCD/: LCD.c  LCD.h
NeoPixel/: NeoPixel.c  NeoPixel.h
SwichHandler/: SwichHandler.c  SwichHandler.h
Systick/: Systick.c  Systick.h
include/: lwipopts.h
